--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="col-6">
               <input
                 type="search"
-                placeholder="Search for a city"
+                placeholder="Search for a city..."
                 autofocus="on"
                 autocomplete="off"
                 id="city-input"
