Added a footer with a link to GitHub

--- a/index.html
+++ b/index.html
@@ -124,8 +124,14 @@
         </div>
       </div>
       </div>
-    </div>
-    <script src="src/index.js"></script>
+     </div>
+     <div id="footer">
+     <a href="https://github.com/OlgaKantarzhy/weather-app" target="_blank">Open-source code</a>
+    <small>
+      , by Olga Kantarzhy
+    <small>
+  </div>
+      <script src="src/index.js"></script>
   </body>
 </html>
 
